Fix alignment for hero text

--- a/source/stylesheets/modules/landing/_hero.scss
+++ b/source/stylesheets/modules/landing/_hero.scss
@@ -19,7 +19,7 @@
   color: white;
   font-size: $base-font-size * 2.2;
   font-weight: 600;
-  margin-bottom: 0.5em;
+  margin: 0 0 0.5em;
 }
 
 .hero-description {
